log/build_2021-06-09_10-19-05/control_pkg/stdout_stderr.log
[35m[1mScanning dependencies of target control_pid_p1_node[0m
[35m[1mScanning dependencies of target control_pid_p2_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o[0m
[ 50%] [32mBuilding CXX object CMakeFiles/control_pid_p2_node.dir/src/control_pid_p2_node.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:110:40: error: stray ‘\303’ in program
  110 |     interfaces::msg::PlatState msg_publñ
      |                                        ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:110:41: error: stray ‘\261’ in program
  110 |     interfaces::msg::PlatState msg_publñ
      |                                         ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::timer_callback()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:111:5: error: expected initializer before ‘msg_publ’
  111 |     msg_publ.platform_state=platform1_state;
      |     ^~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:112:40: error: ‘msg_publ’ was not declared in this scope
  112 |     state_platform1_publisher->publish(msg_publ);
      |                                        ^~~~~~~~
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 75%] [32m[1mLinking CXX executable control_pid_p2_node[0m
[ 75%] Built target control_pid_p2_node
make: *** [Makefile:141: all] Error 2
